--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -19,10 +19,9 @@
     <modules>
         <module>common-module</module>
         <module>flight-service</module>
-        <!-- 其他模块先注释掉，防止报错 -->
-        <!-- <module>auth-service</module> -->
-        <!-- <module>order-service</module> -->
-        <!-- <module>gateway-service</module> -->
+        <module>auth-service</module>
+        <module>order-service</module>
+        <module>gateway-service</module>
     </modules>
 
     <properties>
