--- a/backend/common-module/pom.xml
+++ b/backend/common-module/pom.xml
@@ -49,6 +49,10 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
         <!-- ================================================= -->
         <!-- 【新增】Security 依赖 (为了支持 Token 工具类和异常处理) -->
         <!-- ================================================= -->
