--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
         "axios": "^1.6.7",
         "babel-runtime": "^6.26.0",
         "core-js": "^3.8.3",
+        "echarts": "^6.0.0",
         "element-ui": "^2.15.14",
         "vue": "^2.7.16",
         "vue-router": "^3.6.5"
